tests/syntax_error/missing_global_keyword_value.jou
foo = 1  # Error: missing 'global' keyword when defining global variable
